tests/rules/samples/ko_include.out
[36mko_include.c[0m - [32mIsPreprocessorStatement[0m In "GlobalScope" from "None" line 1":
		<INCLUDE=#include <main.c>> <NEWLINE>
[36mko_include.c[0m - [32mIsPreprocessorStatement[0m In "GlobalScope" from "None" line 2":
		<DEFINE=#define KO_INcLUDE_C> <NEWLINE>
[36mko_include.c[0m - [32mIsPreprocessorStatement[0m In "GlobalScope" from "None" line 3":
		<INCLUDE=#include <main.c>> <NEWLINE>
ko_include.c: Error!
Error: INCLUDE_HEADER_ONLY  (line:   1, col:   1):	.c file includes are forbidden
Error: INVALID_HEADER       (line:   1, col:   1):	Missing or invalid 42 header
Error: MACRO_NAME_CAPITAL   (line:   2, col:   3):	Macro name must be capitalized
Error: INCLUDE_START_FILE   (line:   3, col:   1):	Include must be at the start of file
